Manohar_Bikaneri_PA2.output
State 72 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM identifier semicolon declaration_list_opt function_declaration_list_opt compound_statement period

    2 declaration_list_opt: declaration_list
    3                     | ε

    4 declaration_list: declaration_list_opt VAR variable_list colon type semicolon

    5 variable_list: identifier
    6              | variable_list comma identifier

    7 type: INTEGER
    8     | STRING

    9 function_declaration_list_opt: function_declaration_list
   10                              | ε

   11 function_declaration_list: function_declaration_list_opt function_declaration semicolon

   12 function_declaration: function_header declaration_list_opt compound_statement

   13 function_header: FUNCTION identifier LPAREN parameter_list RPAREN colon type semicolon

   14 parameter_list: variable_list colon type
   15               | parameter_list variable_list colon type

   16 compound_statement: BEGIN_ statement_list END_

   17 statement_list: statement
   18               | statement_list semicolon statement

   19 statement: identifier assignop expression
   20          | selection_statement
   21          | iteration_statement
   22          | compound_statement

   23 selection_statement: IF expression THEN statement ELSE statement
   24                    | IF expression THEN statement

   25 iteration_statement: WHILE expression DO statement

   26 expression_list: expression
   27                | expression_list comma expression

   28 expression: simple_expression
   29           | simple_expression relop simple_expression

   30 simple_expression: term
   31                  | simple_expression addop term

   32 term: factor
   33     | term mulop factor

   34 factor: identifier
   35       | constant
   36       | string-literal
   37       | LPAREN expression RPAREN
   38       | identifier LPAREN expression_list RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 1
    FUNCTION (259) 13
    VAR (260) 4
    INTEGER (261) 7
    STRING (262) 8
    WHILE (263) 25
    DO (264) 25
    IF (265) 23 24
    THEN (266) 23 24
    ELSE (267) 23
    BEGIN_ (268) 16
    END_ (269) 16
    identifier (270) 1 5 6 13 19 34 38
    constant (271) 35
    string-literal (272) 36
    relop (273) 29
    assignop (274) 19
    mulop (275) 33
    addop (276) 31
    LPAREN (277) 13 37 38
    RPAREN (278) 13 37 38
    comma (279) 6 27
    semicolon (280) 1 4 11 13 18
    colon (281) 4 13 14 15
    period (282) 1


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program (29)
        on left: 1
        on right: 0
    declaration_list_opt (30)
        on left: 2 3
        on right: 1 4 12
    declaration_list (31)
        on left: 4
        on right: 2
    variable_list (32)
        on left: 5 6
        on right: 4 6 14 15
    type (33)
        on left: 7 8
        on right: 4 13 14 15
    function_declaration_list_opt (34)
        on left: 9 10
        on right: 1 11
    function_declaration_list (35)
        on left: 11
        on right: 9
    function_declaration (36)
        on left: 12
        on right: 11
    function_header (37)
        on left: 13
        on right: 12
    parameter_list (38)
        on left: 14 15
        on right: 13 15
    compound_statement (39)
        on left: 16
        on right: 1 12 22
    statement_list (40)
        on left: 17 18
        on right: 16 18
    statement (41)
        on left: 19 20 21 22
        on right: 17 18 23 24 25
    selection_statement (42)
        on left: 23 24
        on right: 20
    iteration_statement (43)
        on left: 25
        on right: 21
    expression_list (44)
        on left: 26 27
        on right: 27 38
    expression (45)
        on left: 28 29
        on right: 19 23 24 25 26 27 37
    simple_expression (46)
        on left: 30 31
        on right: 28 29 31
    term (47)
        on left: 32 33
        on right: 30 31 33
    factor (48)
        on left: 34 35 36 37 38
        on right: 32 33


State 0

    0 $accept: • program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM • identifier semicolon declaration_list_opt function_declaration_list_opt compound_statement period

    identifier  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM identifier • semicolon declaration_list_opt function_declaration_list_opt compound_statement period

    semicolon  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: PROGRAM identifier semicolon • declaration_list_opt function_declaration_list_opt compound_statement period

    $default  reduce using rule 3 (declaration_list_opt)

    declaration_list_opt  go to state 6
    declaration_list      go to state 7


State 6

    1 program: PROGRAM identifier semicolon declaration_list_opt • function_declaration_list_opt compound_statement period
    4 declaration_list: declaration_list_opt • VAR variable_list colon type semicolon

    VAR  shift, and go to state 8

    $default  reduce using rule 10 (function_declaration_list_opt)

    function_declaration_list_opt  go to state 9
    function_declaration_list      go to state 10


State 7

    2 declaration_list_opt: declaration_list •

    $default  reduce using rule 2 (declaration_list_opt)


State 8

    4 declaration_list: declaration_list_opt VAR • variable_list colon type semicolon

    identifier  shift, and go to state 11

    variable_list  go to state 12


State 9

    1 program: PROGRAM identifier semicolon declaration_list_opt function_declaration_list_opt • compound_statement period
   11 function_declaration_list: function_declaration_list_opt • function_declaration semicolon

    FUNCTION  shift, and go to state 13
    BEGIN_    shift, and go to state 14

    function_declaration  go to state 15
    function_header       go to state 16
    compound_statement    go to state 17


State 10

    9 function_declaration_list_opt: function_declaration_list •

    $default  reduce using rule 9 (function_declaration_list_opt)


State 11

    5 variable_list: identifier •

    $default  reduce using rule 5 (variable_list)


State 12

    4 declaration_list: declaration_list_opt VAR variable_list • colon type semicolon
    6 variable_list: variable_list • comma identifier

    comma  shift, and go to state 18
    colon  shift, and go to state 19


State 13

   13 function_header: FUNCTION • identifier LPAREN parameter_list RPAREN colon type semicolon

    identifier  shift, and go to state 20


State 14

   16 compound_statement: BEGIN_ • statement_list END_

    WHILE       shift, and go to state 21
    IF          shift, and go to state 22
    BEGIN_      shift, and go to state 14
    identifier  shift, and go to state 23

    compound_statement   go to state 24
    statement_list       go to state 25
    statement            go to state 26
    selection_statement  go to state 27
    iteration_statement  go to state 28


State 15

   11 function_declaration_list: function_declaration_list_opt function_declaration • semicolon

    semicolon  shift, and go to state 29


State 16

   12 function_declaration: function_header • declaration_list_opt compound_statement

    $default  reduce using rule 3 (declaration_list_opt)

    declaration_list_opt  go to state 30
    declaration_list      go to state 7


State 17

    1 program: PROGRAM identifier semicolon declaration_list_opt function_declaration_list_opt compound_statement • period

    period  shift, and go to state 31


State 18

    6 variable_list: variable_list comma • identifier

    identifier  shift, and go to state 32


State 19

    4 declaration_list: declaration_list_opt VAR variable_list colon • type semicolon

    INTEGER  shift, and go to state 33
    STRING   shift, and go to state 34

    type  go to state 35


State 20

   13 function_header: FUNCTION identifier • LPAREN parameter_list RPAREN colon type semicolon

    LPAREN  shift, and go to state 36


State 21

   25 iteration_statement: WHILE • expression DO statement

    identifier      shift, and go to state 37
    constant        shift, and go to state 38
    string-literal  shift, and go to state 39
    LPAREN          shift, and go to state 40

    expression         go to state 41
    simple_expression  go to state 42
    term               go to state 43
    factor             go to state 44


State 22

   23 selection_statement: IF • expression THEN statement ELSE statement
   24                    | IF • expression THEN statement

    identifier      shift, and go to state 37
    constant        shift, and go to state 38
    string-literal  shift, and go to state 39
    LPAREN          shift, and go to state 40

    expression         go to state 45
    simple_expression  go to state 42
    term               go to state 43
    factor             go to state 44


State 23

   19 statement: identifier • assignop expression

    assignop  shift, and go to state 46


State 24

   22 statement: compound_statement •

    $default  reduce using rule 22 (statement)


State 25

   16 compound_statement: BEGIN_ statement_list • END_
   18 statement_list: statement_list • semicolon statement

    END_       shift, and go to state 47
    semicolon  shift, and go to state 48


State 26

   17 statement_list: statement •

    $default  reduce using rule 17 (statement_list)


State 27

   20 statement: selection_statement •

    $default  reduce using rule 20 (statement)


State 28

   21 statement: iteration_statement •

    $default  reduce using rule 21 (statement)


State 29

   11 function_declaration_list: function_declaration_list_opt function_declaration semicolon •

    $default  reduce using rule 11 (function_declaration_list)


State 30

    4 declaration_list: declaration_list_opt • VAR variable_list colon type semicolon
   12 function_declaration: function_header declaration_list_opt • compound_statement

    VAR     shift, and go to state 8
    BEGIN_  shift, and go to state 14

    compound_statement  go to state 49


State 31

    1 program: PROGRAM identifier semicolon declaration_list_opt function_declaration_list_opt compound_statement period •

    $default  reduce using rule 1 (program)


State 32

    6 variable_list: variable_list comma identifier •

    $default  reduce using rule 6 (variable_list)


State 33

    7 type: INTEGER •

    $default  reduce using rule 7 (type)


State 34

    8 type: STRING •

    $default  reduce using rule 8 (type)


State 35

    4 declaration_list: declaration_list_opt VAR variable_list colon type • semicolon

    semicolon  shift, and go to state 50


State 36

   13 function_header: FUNCTION identifier LPAREN • parameter_list RPAREN colon type semicolon

    identifier  shift, and go to state 11

    variable_list   go to state 51
    parameter_list  go to state 52


State 37

   34 factor: identifier •
   38       | identifier • LPAREN expression_list RPAREN

    LPAREN  shift, and go to state 53

    $default  reduce using rule 34 (factor)


State 38

   35 factor: constant •

    $default  reduce using rule 35 (factor)


State 39

   36 factor: string-literal •

    $default  reduce using rule 36 (factor)


State 40

   37 factor: LPAREN • expression RPAREN

    identifier      shift, and go to state 37
    constant        shift, and go to state 38
    string-literal  shift, and go to state 39
    LPAREN          shift, and go to state 40

    expression         go to state 54
    simple_expression  go to state 42
    term               go to state 43
    factor             go to state 44


State 41

   25 iteration_statement: WHILE expression • DO statement

    DO  shift, and go to state 55


State 42

   28 expression: simple_expression •
   29           | simple_expression • relop simple_expression
   31 simple_expression: simple_expression • addop term

    relop  shift, and go to state 56
    addop  shift, and go to state 57

    $default  reduce using rule 28 (expression)


State 43

   30 simple_expression: term •
   33 term: term • mulop factor

    mulop  shift, and go to state 58

    $default  reduce using rule 30 (simple_expression)


State 44

   32 term: factor •

    $default  reduce using rule 32 (term)


State 45

   23 selection_statement: IF expression • THEN statement ELSE statement
   24                    | IF expression • THEN statement

    THEN  shift, and go to state 59


State 46

   19 statement: identifier assignop • expression

    identifier      shift, and go to state 37
    constant        shift, and go to state 38
    string-literal  shift, and go to state 39
    LPAREN          shift, and go to state 40

    expression         go to state 60
    simple_expression  go to state 42
    term               go to state 43
    factor             go to state 44


State 47

   16 compound_statement: BEGIN_ statement_list END_ •

    $default  reduce using rule 16 (compound_statement)


State 48

   18 statement_list: statement_list semicolon • statement

    WHILE       shift, and go to state 21
    IF          shift, and go to state 22
    BEGIN_      shift, and go to state 14
    identifier  shift, and go to state 23

    compound_statement   go to state 24
    statement            go to state 61
    selection_statement  go to state 27
    iteration_statement  go to state 28


State 49

   12 function_declaration: function_header declaration_list_opt compound_statement •

    $default  reduce using rule 12 (function_declaration)


State 50

    4 declaration_list: declaration_list_opt VAR variable_list colon type semicolon •

    $default  reduce using rule 4 (declaration_list)


State 51

    6 variable_list: variable_list • comma identifier
   14 parameter_list: variable_list • colon type

    comma  shift, and go to state 18
    colon  shift, and go to state 62


State 52

   13 function_header: FUNCTION identifier LPAREN parameter_list • RPAREN colon type semicolon
   15 parameter_list: parameter_list • variable_list colon type

    identifier  shift, and go to state 11
    RPAREN      shift, and go to state 63

    variable_list  go to state 64


State 53

   38 factor: identifier LPAREN • expression_list RPAREN

    identifier      shift, and go to state 37
    constant        shift, and go to state 38
    string-literal  shift, and go to state 39
    LPAREN          shift, and go to state 40

    expression_list    go to state 65
    expression         go to state 66
    simple_expression  go to state 42
    term               go to state 43
    factor             go to state 44


State 54

   37 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 67


State 55

   25 iteration_statement: WHILE expression DO • statement

    WHILE       shift, and go to state 21
    IF          shift, and go to state 22
    BEGIN_      shift, and go to state 14
    identifier  shift, and go to state 23

    compound_statement   go to state 24
    statement            go to state 68
    selection_statement  go to state 27
    iteration_statement  go to state 28


State 56

   29 expression: simple_expression relop • simple_expression

    identifier      shift, and go to state 37
    constant        shift, and go to state 38
    string-literal  shift, and go to state 39
    LPAREN          shift, and go to state 40

    simple_expression  go to state 69
    term               go to state 43
    factor             go to state 44


State 57

   31 simple_expression: simple_expression addop • term

    identifier      shift, and go to state 37
    constant        shift, and go to state 38
    string-literal  shift, and go to state 39
    LPAREN          shift, and go to state 40

    term    go to state 70
    factor  go to state 44


State 58

   33 term: term mulop • factor

    identifier      shift, and go to state 37
    constant        shift, and go to state 38
    string-literal  shift, and go to state 39
    LPAREN          shift, and go to state 40

    factor  go to state 71


State 59

   23 selection_statement: IF expression THEN • statement ELSE statement
   24                    | IF expression THEN • statement

    WHILE       shift, and go to state 21
    IF          shift, and go to state 22
    BEGIN_      shift, and go to state 14
    identifier  shift, and go to state 23

    compound_statement   go to state 24
    statement            go to state 72
    selection_statement  go to state 27
    iteration_statement  go to state 28


State 60

   19 statement: identifier assignop expression •

    $default  reduce using rule 19 (statement)


State 61

   18 statement_list: statement_list semicolon statement •

    $default  reduce using rule 18 (statement_list)


State 62

   14 parameter_list: variable_list colon • type

    INTEGER  shift, and go to state 33
    STRING   shift, and go to state 34

    type  go to state 73


State 63

   13 function_header: FUNCTION identifier LPAREN parameter_list RPAREN • colon type semicolon

    colon  shift, and go to state 74


State 64

    6 variable_list: variable_list • comma identifier
   15 parameter_list: parameter_list variable_list • colon type

    comma  shift, and go to state 18
    colon  shift, and go to state 75


State 65

   27 expression_list: expression_list • comma expression
   38 factor: identifier LPAREN expression_list • RPAREN

    RPAREN  shift, and go to state 76
    comma   shift, and go to state 77


State 66

   26 expression_list: expression •

    $default  reduce using rule 26 (expression_list)


State 67

   37 factor: LPAREN expression RPAREN •

    $default  reduce using rule 37 (factor)


State 68

   25 iteration_statement: WHILE expression DO statement •

    $default  reduce using rule 25 (iteration_statement)


State 69

   29 expression: simple_expression relop simple_expression •
   31 simple_expression: simple_expression • addop term

    addop  shift, and go to state 57

    $default  reduce using rule 29 (expression)


State 70

   31 simple_expression: simple_expression addop term •
   33 term: term • mulop factor

    mulop  shift, and go to state 58

    $default  reduce using rule 31 (simple_expression)


State 71

   33 term: term mulop factor •

    $default  reduce using rule 33 (term)


State 72

   23 selection_statement: IF expression THEN statement • ELSE statement
   24                    | IF expression THEN statement •

    ELSE  shift, and go to state 78

    ELSE      [reduce using rule 24 (selection_statement)]
    $default  reduce using rule 24 (selection_statement)


State 73

   14 parameter_list: variable_list colon type •

    $default  reduce using rule 14 (parameter_list)


State 74

   13 function_header: FUNCTION identifier LPAREN parameter_list RPAREN colon • type semicolon

    INTEGER  shift, and go to state 33
    STRING   shift, and go to state 34

    type  go to state 79


State 75

   15 parameter_list: parameter_list variable_list colon • type

    INTEGER  shift, and go to state 33
    STRING   shift, and go to state 34

    type  go to state 80


State 76

   38 factor: identifier LPAREN expression_list RPAREN •

    $default  reduce using rule 38 (factor)


State 77

   27 expression_list: expression_list comma • expression

    identifier      shift, and go to state 37
    constant        shift, and go to state 38
    string-literal  shift, and go to state 39
    LPAREN          shift, and go to state 40

    expression         go to state 81
    simple_expression  go to state 42
    term               go to state 43
    factor             go to state 44


State 78

   23 selection_statement: IF expression THEN statement ELSE • statement

    WHILE       shift, and go to state 21
    IF          shift, and go to state 22
    BEGIN_      shift, and go to state 14
    identifier  shift, and go to state 23

    compound_statement   go to state 24
    statement            go to state 82
    selection_statement  go to state 27
    iteration_statement  go to state 28


State 79

   13 function_header: FUNCTION identifier LPAREN parameter_list RPAREN colon type • semicolon

    semicolon  shift, and go to state 83


State 80

   15 parameter_list: parameter_list variable_list colon type •

    $default  reduce using rule 15 (parameter_list)


State 81

   27 expression_list: expression_list comma expression •

    $default  reduce using rule 27 (expression_list)


State 82

   23 selection_statement: IF expression THEN statement ELSE statement •

    $default  reduce using rule 23 (selection_statement)


State 83

   13 function_header: FUNCTION identifier LPAREN parameter_list RPAREN colon type semicolon •

    $default  reduce using rule 13 (function_header)
